[gd_scene load_steps=4 format=3 uid="uid://vvrbnfokwc4g"]

[ext_resource type="Script" path="res://snake_pit.gd" id="1_vi1c5"]
[ext_resource type="PackedScene" uid="uid://c0t64pvrf1qs8" path="res://snake/head.tscn" id="2_f8883"]

[sub_resource type="Theme" id="Theme_7b3uf"]
default_font_size = 48

[node name="Snake_pit" type="Node2D"]
script = ExtResource("1_vi1c5")
HeadScene = ExtResource("2_f8883")

[node name="Debug_labels" type="Control" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_7b3uf")

[node name="Rel" type="Label" parent="Debug_labels"]
offset_left = 424.0
offset_top = 99.0
offset_right = 464.0
offset_bottom = 166.0
metadata/_edit_layout_mode = 0
metadata/_edit_use_custom_anchors = false

[node name="Time_step" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Time_step" to="." method="_on_time_step_timeout"]
